--- a/swing/JavaApplication1/src/javaapplication1/pane.form
+++ b/swing/JavaApplication1/src/javaapplication1/pane.form
@@ -30,16 +30,17 @@
               <Component id="so2" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
           </Group>
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="btnrun" min="-2" pref="74" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="159" max="-2" attributes="0"/>
-          </Group>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
-              <Component id="lbtt1" min="-2" pref="85" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="lbtt1" alignment="0" min="-2" pref="85" max="-2" attributes="0"/>
+                  <Component id="btnrun" alignment="0" min="-2" pref="74" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace pref="157" max="32767" attributes="0"/>
-              <Component id="lbtt2" min="-2" pref="85" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="lbtt2" pref="85" max="32767" attributes="0"/>
+                  <Component id="btnstop" max="32767" attributes="0"/>
+              </Group>
               <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -62,9 +63,12 @@
                       <Component id="lbtt2" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
-              <Component id="btnrun" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="90" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="btnrun" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnstop" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="93" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -97,6 +101,14 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="trang thai"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnstop">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="stop"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnstopActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
